--- a/ManagerM/ui_opciones.ui
+++ b/ManagerM/ui_opciones.ui
@@ -152,6 +152,24 @@
          </item>
          <item>
           <property name="text">
+           <string>Comprobantes</string>
+          </property>
+          <property name="icon">
+           <iconset resource="Icons.qrc">
+            <normaloff>:/Iconos/Iconos/Journal.png</normaloff>:/Iconos/Iconos/Journal.png</iconset>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>General</string>
+          </property>
+          <property name="icon">
+           <iconset resource="Icons.qrc">
+            <normaloff>:/Iconos/Iconos/Windows_Mobility_Center.png</normaloff>:/Iconos/Iconos/Windows_Mobility_Center.png</iconset>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>Base de Datos</string>
           </property>
           <property name="background">
@@ -166,15 +184,6 @@
           <property name="icon">
            <iconset resource="Icons.qrc">
             <normaloff>:/Iconos/Iconos/RegEdit.png</normaloff>:/Iconos/Iconos/RegEdit.png</iconset>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>General</string>
-          </property>
-          <property name="icon">
-           <iconset resource="Icons.qrc">
-            <normaloff>:/Iconos/Iconos/Windows_Mobility_Center.png</normaloff>:/Iconos/Iconos/Windows_Mobility_Center.png</iconset>
           </property>
          </item>
         </widget>
