--- a/ManagerM/ui_opciones_comprobante.ui
+++ b/ManagerM/ui_opciones_comprobante.ui
@@ -23,7 +23,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget_boleta">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -43,13 +43,13 @@
               <widget class="QLabel" name="label">
                <property name="minimumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -79,7 +79,7 @@
              </item>
             </layout>
            </item>
-           <item row="0" column="2">
+           <item row="0" column="4">
             <widget class="QPushButton" name="pushButton_usar_f">
              <property name="text">
               <string>Usar esta serie</string>
@@ -92,13 +92,13 @@
               <widget class="QLabel" name="label_2">
                <property name="minimumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -128,19 +128,19 @@
              </item>
             </layout>
            </item>
-           <item row="1" column="1">
+           <item row="1" column="2">
             <layout class="QHBoxLayout" name="horizontalLayout_3">
              <item>
               <widget class="QLabel" name="label_3">
                <property name="minimumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -170,10 +170,13 @@
              </item>
             </layout>
            </item>
-           <item row="1" column="2">
+           <item row="1" column="4">
             <widget class="QSplitter" name="splitter">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="handleWidth">
+              <number>1</number>
              </property>
              <widget class="QPushButton" name="pushButton_save_f">
               <property name="text">
@@ -213,6 +216,32 @@
              </widget>
             </widget>
            </item>
+           <item row="1" column="1">
+            <spacer name="horizontalSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="1" column="3">
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
           </layout>
          </item>
         </layout>
@@ -227,7 +256,7 @@
        <item row="0" column="0">
         <layout class="QGridLayout" name="gridLayout_5">
          <item row="0" column="0">
-          <widget class="QTableView" name="tableView_2"/>
+          <widget class="QTableView" name="tableView_boleta"/>
          </item>
          <item row="1" column="0">
           <layout class="QGridLayout" name="gridLayout_6">
@@ -237,13 +266,13 @@
               <widget class="QLabel" name="label_4">
                <property name="minimumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -273,7 +302,7 @@
              </item>
             </layout>
            </item>
-           <item row="0" column="2">
+           <item row="0" column="4">
             <widget class="QPushButton" name="pushButton_usar_b">
              <property name="text">
               <string>Usar esta serie</string>
@@ -286,13 +315,13 @@
               <widget class="QLabel" name="label_7">
                <property name="minimumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -322,19 +351,19 @@
              </item>
             </layout>
            </item>
-           <item row="1" column="1">
+           <item row="1" column="2">
             <layout class="QHBoxLayout" name="horizontalLayout_8">
              <item>
               <widget class="QLabel" name="label_8">
                <property name="minimumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
-                 <width>100</width>
+                 <width>80</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -364,10 +393,13 @@
              </item>
             </layout>
            </item>
-           <item row="1" column="2">
+           <item row="1" column="4">
             <widget class="QSplitter" name="splitter_2">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="handleWidth">
+              <number>1</number>
              </property>
              <widget class="QPushButton" name="pushButton_save_b">
               <property name="text">
@@ -406,6 +438,32 @@
               </property>
              </widget>
             </widget>
+           </item>
+           <item row="1" column="1">
+            <spacer name="horizontalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="1" column="3">
+            <spacer name="horizontalSpacer_4">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </item>
