--- a/ManagerM/ui_opciones_comprobante.ui
+++ b/ManagerM/ui_opciones_comprobante.ui
@@ -33,7 +33,14 @@
        <item row="0" column="0">
         <layout class="QGridLayout" name="gridLayout_3">
          <item row="0" column="0">
-          <widget class="QTableView" name="tableView_factura"/>
+          <widget class="QTableView" name="tableView_factura">
+           <property name="selectionMode">
+            <enum>QAbstractItemView::SingleSelection</enum>
+           </property>
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectRows</enum>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <layout class="QGridLayout" name="gridLayout_2">
@@ -55,6 +62,9 @@
                </property>
                <property name="text">
                 <string>Serie</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
               </widget>
              </item>
@@ -105,6 +115,9 @@
                <property name="text">
                 <string>Número Inicio</string>
                </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
               </widget>
              </item>
              <item>
@@ -146,6 +159,9 @@
                </property>
                <property name="text">
                 <string>Número Fin</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
               </widget>
              </item>
@@ -256,7 +272,14 @@
        <item row="0" column="0">
         <layout class="QGridLayout" name="gridLayout_5">
          <item row="0" column="0">
-          <widget class="QTableView" name="tableView_boleta"/>
+          <widget class="QTableView" name="tableView_boleta">
+           <property name="selectionMode">
+            <enum>QAbstractItemView::SingleSelection</enum>
+           </property>
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectRows</enum>
+           </property>
+          </widget>
          </item>
          <item row="1" column="0">
           <layout class="QGridLayout" name="gridLayout_6">
@@ -278,6 +301,9 @@
                </property>
                <property name="text">
                 <string>Serie</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
               </widget>
              </item>
@@ -328,6 +354,9 @@
                <property name="text">
                 <string>Número Inicio</string>
                </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+               </property>
               </widget>
              </item>
              <item>
@@ -369,6 +398,9 @@
                </property>
                <property name="text">
                 <string>Número Fin</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                </property>
               </widget>
              </item>
