--- a/ManagerM/ui_edit_personalinformation.ui
+++ b/ManagerM/ui_edit_personalinformation.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>305</width>
-    <height>466</height>
+    <width>315</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="font">
@@ -49,7 +49,7 @@
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <property name="spacing">
            <number>15</number>
@@ -58,13 +58,13 @@
            <widget class="QLabel" name="label_20">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -103,7 +103,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_4">
           <property name="spacing">
            <number>15</number>
@@ -112,13 +112,13 @@
            <widget class="QLabel" name="label_22">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -151,7 +151,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <property name="spacing">
            <number>15</number>
@@ -160,13 +160,13 @@
            <widget class="QLabel" name="label_18">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -199,7 +199,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_6">
           <property name="spacing">
            <number>15</number>
@@ -208,13 +208,13 @@
            <widget class="QLabel" name="label_25">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -247,7 +247,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_7">
           <property name="spacing">
            <number>15</number>
@@ -256,13 +256,13 @@
            <widget class="QLabel" name="label_24">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -288,11 +288,14 @@
               <height>16777215</height>
              </size>
             </property>
+            <property name="calendarPopup">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_8">
           <property name="spacing">
            <number>15</number>
@@ -301,13 +304,13 @@
            <widget class="QLabel" name="label_27">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -347,7 +350,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_9">
           <property name="spacing">
            <number>15</number>
@@ -356,13 +359,13 @@
            <widget class="QLabel" name="label_21">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -412,7 +415,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_10">
           <property name="spacing">
            <number>15</number>
@@ -421,13 +424,13 @@
            <widget class="QLabel" name="label_15">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -466,7 +469,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_11">
           <property name="spacing">
            <number>15</number>
@@ -475,13 +478,13 @@
            <widget class="QLabel" name="label_14">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -520,7 +523,7 @@
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_12">
           <property name="spacing">
            <number>15</number>
@@ -529,13 +532,13 @@
            <widget class="QLabel" name="label_23">
             <property name="minimumSize">
              <size>
-              <width>100</width>
+              <width>110</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>100</width>
+              <width>111005</width>
               <height>16777215</height>
              </size>
             </property>
@@ -588,13 +591,13 @@
          <widget class="QLabel" name="label_6">
           <property name="minimumSize">
            <size>
-            <width>100</width>
+            <width>110</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>100</width>
+            <width>111005</width>
             <height>16777215</height>
            </size>
           </property>
@@ -633,13 +636,13 @@
          <widget class="QLabel" name="label_8">
           <property name="minimumSize">
            <size>
-            <width>100</width>
+            <width>110</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>100</width>
+            <width>111005</width>
             <height>16777215</height>
            </size>
           </property>
@@ -669,19 +672,6 @@
         </item>
        </layout>
       </item>
-      <item row="2" column="0">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>135</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
       <item row="2" column="1">
        <widget class="QPushButton" name="pushButton_change">
         <property name="text">
@@ -696,9 +686,21 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>135</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
-     <zorder>layoutWidget</zorder>
-     <zorder>groupBox_2</zorder>
+     <zorder>pushButton_change</zorder>
      <zorder>horizontalSpacer</zorder>
     </widget>
    </item>
